# Grammarkov

./: .gitignore  grammarkov.cabal
src/: grammarkov.hs
src/Text/: Grammarkov.hs
